--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <canvas id="canvas" width="500" height="700"></canvas>
     </div>
 
+    <div class="game-over">
+      <img src="./images/gameover.jpg">
+    </div>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
